#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psocake
#------------------------------------------------------------------------

Package author: Chunhong "Chuck" Yoon

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-01-20
2016-06-17 Chunhong Yoon
- Added hybrid gain for cspad types

Tag: V00-01-19
2016-06-15 Chunhong Yoon
- Bug fix: use clen only at CXI

Tag: V00-01-18
2016-06-06 Chunhong Yoon
- Demo version

Tag: V00-01-17
2016-05-23 Chunhong Yoon
- Allow detector distance scan
- Triple integration ring

Tag: V00-01-16
2016-05-23 Chunhong Yoon
- Add indexing result display

Tag: V00-01-15
2016-05-22 Chunhong Yoon
- Add CrystFEL indexing panel

Tag: V00-01-14
2016-05-18 Chunhong Yoon
- Fix 2048 peak finder limit

Tag: V00-01-13
2016-05-13 Chunhong Yoon
- Removed peak finder v2

Tag: V00-01-12
2016-05-12 Christopher O'Grady
- For cspad2x2 user masks, save both DAQ/natural shape arrays in npy files

Tag: V00-01-11
2016-05-08 Chunhong Yoon
- Add back generatePowder

Tag: V00-01-10
2016-05-08 Chunhong Yoon
- Fix pedestal display
- Add common mode display

Tag: V00-01-09
2016-05-02 Chunhong Yoon
- Better detector information display

Tag: V00-01-08
2016-04-25 Chunhong Yoon
- Added psana-style experiment:run string

Tag: V00-01-07
2016-04-18 Chunhong Yoon
- Tabbed dock areas
- Add chi squared hit finder

Tag: V00-01-06
2016-04-18 Chunhong Yoon
- Added peak finder algorithm 4 to findPeaks app
- Fix rectangular mask out of range problem
- Add 99 percentile display range

Tag: V00-01-05
2016-04-15 Christopher O'Grady
- Move generatePowder.py to app/generatePowder and fix a bug where
  the gain multiplication was done before checking that detector
  array was not None.

Tag: V00-01-04
2016-04-12 Chunhong Yoon
- Added peak finder algorithm 4

Tag: V00-01-03
2016-04-12 Chunhong Yoon
- Run findPeaks using app
